v0.4.0				- Restructured assemblies for plugin isolation
					- Better messaging for Maya 211 error
					- Better messaging for no task output error
v0.3.1, 2015-06-24	- Added pre-submission check for a render camera and enabled render layer
v0.3.0,	2015-06-22	- Added search path feature to assets tab
					- Gave asset references icons according to whether they were found
					- Add .lock and .cat extensions to server output filter
v0.2.2, 2015-06-10	- Added Version select to Arnold module
					- Dynamically create mtoa.mod
					- Removed some Yeti references to help debug Arnold
					- Fixed cache file reference search
					- Added output file prefix setting to fix multiple outputs of the same name
v0.2.1, 2015-06-05	- Fixed UI alignment bug in Job History tab
					- Fixed UI refresh bugs in Assets tab
v0.2.0, 2015-06-04	- Added ability to select pool on submission
					- Added ability to select Maya version on submission
					- Made assemblies non-version specific - version information now loaded from config file in application image
					- Plugin prompts user if Maya scene has unsaved changes
					- Plugin allows user to give filename to downloaded outputs
v0.1.0, 2015-05-26	- Initial release.